--- a/demo/ristorante/index.html
+++ b/demo/ristorante/index.html
@@ -10,8 +10,7 @@
 -->
   <link rel="stylesheet" href="css/index.css?v=1.01">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" media ='only screen and (max-device-width : 1440px)'
-  href="css/index-responsive.css">
+  <link rel="stylesheet" media='only screen and (max-device-width : 1440px)' href="css/index-responsive.css">
   <title>Da Tigiol | Pizzeria Ristorante</title>
 </head>
 
@@ -20,10 +19,18 @@
   <nav class="">
     <a href="index.html" class="brand">Da Tigiol</a>
     <ul class="">
-      <li class=""> <a href="menu.html" class="">Menu</a> </li>
-      <li class=""> <a href="su-di-noi.html" class="">Su Di Noi</a> </li>
-      <li class=""> <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a> </li>
-      <li class=""> <a href="http://josephtolentino.net" class="">Torna al mio Sito</a> </li>
+      <li class="">
+        <a href="menu.html" class="">Menu</a>
+      </li>
+      <li class="">
+        <a href="su-di-noi.html" class="">Su Di Noi</a>
+      </li>
+      <li class="">
+        <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a>
+      </li>
+      <li class="">
+        <a href="http://tj9027.github.io/josephtolentino/" class="">Torna al mio Sito</a>
+      </li>
     </ul>
   </nav>
   <!--WELCOME SECTION-->
@@ -43,8 +50,11 @@
         <h1 class="golden xlarge-font">Scopri</h1>
         <h2 class="sub">LA NOSTRA STORIA</h2>
         <h2 class="sub ast">***</h2>
-        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
-        <a href="su-di-noi.html"><button class="golden-border">Su Di Noi</button></a>
+        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget
+          quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
+        <a href="su-di-noi.html">
+          <button class="golden-border">Su Di Noi</button>
+        </a>
       </div>
       <div class="content-wrapper  single">
         <img src="images/tables_out.jpg" alt="tavoli fuori">
@@ -67,8 +77,11 @@
         <h1 class="golden xlarge-font">Scopri</h1>
         <h2 class="sub">IL NOSTRO MENU</h2>
         <h2 class="sub ast">***</h2>
-        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
-        <a href="menu.html"><button class="golden-border">Menu Completo</button></a>
+        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget
+          quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
+        <a href="menu.html">
+          <button class="golden-border">Menu Completo</button>
+        </a>
       </div>
       <div class="content-wrapper grid4">
         <img src="images/almonds_coffee.jpeg" alt="lavanda e caffe">
@@ -90,8 +103,11 @@
         <h1 class="golden xlarge-font">Delizie</h1>
         <h2 class="sub">CULINARIE</h2>
         <h2 class="sub ast">***</h2>
-        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
-        <a href="prenotazione-e-contatti.html"><button class="golden-border">Prenota</button></a>
+        <p class="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget
+          quam efficitur, porttitor aliquet augue. Mauris elementum malesuada.</p>
+        <a href="prenotazione-e-contatti.html">
+          <button class="golden-border">Prenota</button>
+        </a>
       </div>
       <div class="content-wrapper grid2">
         <img src="images/italian_bread.jpeg" alt="patatine e salsa">
@@ -113,8 +129,10 @@
     <div class="footer-content-wrapper">
       <h3>Telefono & Email</h3>
       <div class="footer-flex">
-        <p><i class="fa fa-phone" aria-hidden="true"></i>  +39 333 333 3333</p>
-        <p><i class="fa fa-envelope" aria-hidden="true"></i>  joseph@josephtolentino.net</p>
+        <p>
+          <i class="fa fa-phone" aria-hidden="true"></i> +39 333 333 3333</p>
+        <p>
+          <i class="fa fa-envelope" aria-hidden="true"></i> joseph@josephtolentino.net</p>
       </div>
     </div>
     <div class="footer-content-wrapper">
