resolved links error and email

--- a/demo/ristorante/menu.html
+++ b/demo/ristorante/menu.html
@@ -19,10 +19,18 @@
   <nav class="">
     <a href="index.html" class="brand">Da Tigiol</a>
     <ul class="">
-      <li class=""> <a href="menu.html" class="active">Menu</a> </li>
-      <li class=""> <a href="su-di-noi.html" class="">Su Di Noi</a> </li>
-      <li class=""> <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a> </li>
-      <li class=""> <a href="http://josephtolentino.net" class="">Torna al mio Sito</a> </li>
+      <li class="">
+        <a href="menu.html" class="active">Menu</a>
+      </li>
+      <li class="">
+        <a href="su-di-noi.html" class="">Su Di Noi</a>
+      </li>
+      <li class="">
+        <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a>
+      </li>
+      <li class="">
+        <a href="http://tj9027.github.io/josephtolentino/" class="">Torna al mio Sito</a>
+      </li>
     </ul>
   </nav>
   <!--INTRO SECTION-->
@@ -34,49 +42,80 @@
     </div>
   </section>
   <!--MENU SECTION-->
-<section class="menu">
-  <div class="content">
-    <div class="menu-type-section content-width">
-      <h1 class="golden spacing">Zuppa ed Insalata</h1>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-    </div>
-    <div class="menu-type-section content-width">
-      <h1 class="golden spacing">Dal Nostro Cortile</h1>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-    </div>
-    <div class="menu-type-section content-width">
-      <h1 class="golden spacing">Dal Nostro Pollaio</h1>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-    </div>
-    <div class="menu-type-section content-width">
-      <h1 class="golden spacing">Fresco Dal Mare</h1>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-      <h4 class="plate-name">Piatto Tipico</h4>
-      <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p><span class="price">$99.99</span><br>
-    </div>
+  <section class="menu">
+    <div class="content">
+      <div class="menu-type-section content-width">
+        <h1 class="golden spacing">Zuppa ed Insalata</h1>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore
+        </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore
+        </p>
+        <span class="price">$99.99</span>
+        <br>
+      </div>
+      <div class="menu-type-section content-width">
+        <h1 class="golden spacing">Dal Nostro Cortile</h1>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+      </div>
+      <div class="menu-type-section content-width">
+        <h1 class="golden spacing">Dal Nostro Pollaio</h1>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore
+        </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore
+        </p>
+        <span class="price">$99.99</span>
+        <br>
+      </div>
+      <div class="menu-type-section content-width">
+        <h1 class="golden spacing">Fresco Dal Mare</h1>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore </p>
+        <span class="price">$99.99</span>
+        <br>
+        <h4 class="plate-name">Piatto Tipico</h4>
+        <p class='plate-description'>Lorem ipsum dolor sit amet, consectetur adipiscing elit,sed do eiusmod tempor incididunt ut labore et dolore
+        </p>
+        <span class="price">$99.99</span>
+        <br>
+      </div>
 
-  </div>
-</section>
+    </div>
+  </section>
   <!--FOOTER SECTION-->
   <footer>
     <div class="footer-content-wrapper">
@@ -91,8 +130,10 @@
     <div class="footer-content-wrapper">
       <h3>Telefono & Email</h3>
       <div class="footer-flex">
-        <p><i class="fa fa-phone" aria-hidden="true"></i>  +39 333 333 3333</p>
-        <p><i class="fa fa-envelope" aria-hidden="true"></i>  joseph@josephtolentino.net</p>
+        <p>
+          <i class="fa fa-phone" aria-hidden="true"></i> +39 333 333 3333</p>
+        <p>
+          <i class="fa fa-envelope" aria-hidden="true"></i> jphctolentino@gmail.com</p>
       </div>
     </div>
     <div class="footer-content-wrapper">
