--- a/demo/ristorante/prenotazione-e-contatti.html
+++ b/demo/ristorante/prenotazione-e-contatti.html
@@ -19,10 +19,18 @@
   <nav class="">
     <a href="index.html" class="brand">Da Tigiol</a>
     <ul class="">
-      <li class=""> <a href="menu.html" class="">Menu</a> </li>
-      <li class=""> <a href="su-di-noi.html" class="">Su Di Noi</a> </li>
-      <li class=""> <a href="prenotazione-e-contatti.html" class="active"> Prenotazione e Contatti</a> </li>
-      <li class=""> <a href="http://josephtolentino.net" class="">Torna al mio Sito</a> </li>
+      <li class="">
+        <a href="menu.html" class="">Menu</a>
+      </li>
+      <li class="">
+        <a href="su-di-noi.html" class="">Su Di Noi</a>
+      </li>
+      <li class="">
+        <a href="prenotazione-e-contatti.html" class="active"> Prenotazione e Contatti</a>
+      </li>
+      <li class="">
+        <a href="http://tj9027.github.io/josephtolentino/" class="">Torna al mio Sito</a>
+      </li>
     </ul>
   </nav>
   <!--INTRO SECTION-->
@@ -41,21 +49,26 @@
         <form class="forms" action="index.html" method="post">
           <div class="input-group">
             <div class="flex-vertical">
-              <label for="nomeCognome" class="linguetta">Nome e Cognome</label><input type="text" name="nomeCognome" value="" placeholder="Nome e Cognome" required>
+              <label for="nomeCognome" class="linguetta">Nome e Cognome</label>
+              <input type="text" name="nomeCognome" value="" placeholder="Nome e Cognome" required>
             </div>
             <div class="flex-vertical">
-              <label for="email" class="linguetta">Email</label><input type="email" name="email" value="" placeholder="Email" required>
+              <label for="email" class="linguetta">Email</label>
+              <input type="email" name="email" value="" placeholder="Email" required>
             </div>
           </div>
           <div class="input-group">
             <div class="flex-vertical">
-              <label for="persone" class="linguetta">Persone</label><input type="number" name="persone" value="" placeholder="Numero" min="1" max="24" required>
+              <label for="persone" class="linguetta">Persone</label>
+              <input type="number" name="persone" value="" placeholder="Numero" min="1" max="24" required>
             </div>
             <div class="flex-vertical">
-              <label for="data" class="linguetta">Data</label><input type="date" name="data" value="" required>
+              <label for="data" class="linguetta">Data</label>
+              <input type="date" name="data" value="" required>
             </div>
             <div class="flex-vertical">
-              <label for="ora" class="linguetta">Ora</label><input type="time" name="ora" value="" min="17:00" max="23:00" required>
+              <label for="ora" class="linguetta">Ora</label>
+              <input type="time" name="ora" value="" min="17:00" max="23:00" required>
             </div>
           </div>
           <input class="golden-border" type="Submit" name="submit" value="Prenota">
@@ -107,8 +120,10 @@
         <div class="footer-content-wrapper">
           <h3>Telefono & Email</h3>
           <div class="footer-flex">
-            <p><i class="fa fa-phone" aria-hidden="true"></i>  +39 333 333 3333</p>
-            <p><i class="fa fa-envelope" aria-hidden="true"></i>  joseph@josephtolentino.net</p>
+            <p>
+              <i class="fa fa-phone" aria-hidden="true"></i> +39 333 333 3333</p>
+            <p>
+              <i class="fa fa-envelope" aria-hidden="true"></i> jphctolentino@gmail.com</p>
           </div>
         </div>
         <div class="footer-content-wrapper">
