--- a/demo/ristorante/su-di-noi.html
+++ b/demo/ristorante/su-di-noi.html
@@ -10,7 +10,7 @@
 -->
   <link rel="stylesheet" href="css/su-di-noi.css?v=1.02">
   <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" media="only screen and (max-width : 1440px )"href="css/su-di-noi-responsive.css">
+  <link rel="stylesheet" media="only screen and (max-width : 1440px )" href="css/su-di-noi-responsive.css">
   <title>Da Tigiol | Pizzeria Ristorante</title>
 </head>
 
@@ -19,10 +19,18 @@
   <nav class="">
     <a href="index.html" class="brand">Da Tigiol</a>
     <ul class="">
-      <li class=""> <a href="menu.html" class="">Menu</a> </li>
-      <li class=""> <a href="su-di-noi.html" class="active">Su Di Noi</a> </li>
-      <li class=""> <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a> </li>
-      <li class=""> <a href="http://josephtolentino.net" class="">Torna al mio Sito</a> </li>
+      <li class="">
+        <a href="menu.html" class="">Menu</a>
+      </li>
+      <li class="">
+        <a href="su-di-noi.html" class="active">Su Di Noi</a>
+      </li>
+      <li class="">
+        <a href="prenotazione-e-contatti.html" class=""> Prenotazione e Contatti</a>
+      </li>
+      <li class="">
+        <a href="http://tj9027.github.io/josephtolentino/" class="">Torna al mio Sito</a>
+      </li>
     </ul>
   </nav>
   <!--INTRO SECTION-->
@@ -40,12 +48,15 @@
         <div class="content-wrapper semi-left">
           <h2 class="sub">LA NOSTRA STORIA</h2>
           <h2 class="sub ast">***</h2>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
         </div>
       </div>
-      </div>
+    </div>
   </section>
   <!--SECONDA STORIA SECTION-->
   <section class="seconda">
@@ -54,12 +65,15 @@
         <div class="content-wrapper semi-right">
           <h2 class="sub">LA NOSTRA STORIA</h2>
           <h2 class="sub ast">***</h2>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
-          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
+          <p class="lorem story">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean eget sagittis massa. Etiam felis erat, finibus
+            eget quam efficitur, porttitor aliquet augue.</p>
         </div>
       </div>
-      </div>
+    </div>
   </section>
   <!--FOOTER SECTION-->
   <footer>
@@ -75,8 +89,10 @@
     <div class="footer-content-wrapper">
       <h3>Telefono & Email</h3>
       <div class="footer-flex">
-        <p><i class="fa fa-phone" aria-hidden="true"></i>  +39 333 333 3333</p>
-        <p><i class="fa fa-envelope" aria-hidden="true"></i>  joseph@josephtolentino.net</p>
+        <p>
+          <i class="fa fa-phone" aria-hidden="true"></i> +39 333 333 3333</p>
+        <p>
+          <i class="fa fa-envelope" aria-hidden="true"></i> jphctolentino@gmail.com</p>
       </div>
     </div>
     <div class="footer-content-wrapper">
@@ -112,4 +128,5 @@
   <script src="js/script.js">
   </script>
 </body>
+
 </html>
