--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <a target="_blank" href="https://www.github.com/tj9027">
             <button>GitHub</button>
           </a>
-          <a target="_blank" href="https://www.linkedin.com/in/joseph-tolentino">
+          <a target="_blank" href="https://www.linkedin.com/in/joseph-tolentino-cayamanda">
             <button>LinkedIn</button>
           </a>
         </div>
